--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "serve": "php artisan serve",
+        "all": "concurrently \"npm run dev\" \"npm run serve\""
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
         "bootstrap": "^5.3.8",
         "bootstrap-icons": "^1.13.1",
-        "concurrently": "^9.0.1",
+        "concurrently": "^9.2.1",
         "laravel-vite-plugin": "^2.0.0",
         "sass-embedded": "^1.93.2",
         "tailwindcss": "^4.0.0",
